fix(home): add flex-wrap to products so that they align automatically according to size of screen

--- a/src/Home/HomePage.css
+++ b/src/Home/HomePage.css
@@ -1,6 +1,7 @@
 .fruits-vegetables-row {
     display: flex;
     margin: 10px;
+    flex-wrap: wrap;
 }
 
 @media screen and (max-width: 24rem){
